test/compile_errors/err_no_receiver_mode.w
//! expect-check-fail: requires an explicit receiver mode
trait Foo =
    fn bar(self: Self) -> i32
